# resume

./: .gitignore  README.md
geodoc_app/: pyproject.toml
geodoc_app/geodoc_app/export/: features.py
geodoc_app/geodoc_app/inputs/: utils.py  values.py
geodoc_deploy/: pyproject.toml
geodoc_deploy/geodoc_deploy/deploy/: create_job_src.py
geodoc_deploy/geodoc_deploy/endpoints/: create_job.py  prepare_grid_pl.py  setup_gcp_for_service.py
geodoc_deploy/geodoc_deploy/services/service-reports/: requirements.txt  service-reports.py
geodoc_deploy/geodoc_deploy/services/spatial-data-downloader/: dockerfile  spatial-data-downloader.py
geodoc_deploy/geodoc_deploy/setup/: bdot_setup.py  ejournals_setup.py  single_table_setup.py
geodoc_loader/: LICENSE  pyproject.toml
geodoc_loader/geodoc_loader/area/: queries.py
geodoc_loader/geodoc_loader/data/: storage.py
geodoc_loader/geodoc_loader/download/: __init__.py  bigquery.py  core.py  gcp.py  process.py  queue.py  validate.py
geodoc_loader/geodoc_loader/handlers/: collection.py  core.py  geom.py
geodoc_loader/geodoc_loader/resources/: fonts.py
geodoc_loader/geodoc_loader/services/: ejournals.py  grid.py  uldk.py
geodoc_run/: pyproject.toml
geodoc_run/geodoc_run/: add_to_queue.py  run_job.py  run_local_job.py
geodoc_run/geodoc_run.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
geodoc_run/geodoc_run/src/: job.py  local_job.py  queue.py
guide_builder/focus_group/deep_retrieval/rag_eval/: pyproject.toml
guide_builder/focus_group/deep_retrieval/rag_eval/src/rag_eval/: __init__.py  prompt_manager.py
guide_builder/focus_group/deep_retrieval/rag_eval/src/rag_eval.egg-info/: PKG-INFO  SOURCES.txt
guide_builder/focus_group/deep_retrieval/rag_eval/src/rag_eval/data/: chunk_database.py  chunk_eval.py  doc_loader.py
guide_builder/focus_group/deep_retrieval/rag_eval/src/rag_eval/prompts/HyDE/: hyde_queries_v1.0.txt
guide_builder/focus_group/deep_retrieval/rag_eval/src/rag_eval/prompts/chunks_evaluation/: doc_context_update_v1.1.txt  doc_context_update_v1.2.txt
guide_builder/focus_group/deep_retrieval/rag_eval/src/rag_eval/prompts/chunks_evaluation_concurrent/: chunk_eval_system_v2.0.txt  chunk_eval_task_v2.0.txt
guide_builder/focus_group/deep_retrieval/rag_eval/src/rag_eval/prompts/paper_search/: keyword_cloud_v1.0.txt  random_queries_v1.1.txt
guide_builder/focus_group/fcgb/: pyproject.toml
guide_builder/focus_group/fcgb/src/fcgb/: prompt_manager.py  utils.py
guide_builder/focus_group/fcgb/src/fcgb.egg-info/: SOURCES.txt  requires.txt  top_level.txt
guide_builder/focus_group/fcgb/src/fcgb/cfg/: precompiled.py
guide_builder/focus_group/fcgb/src/fcgb/cfg/prompts_sets/: planned_task_solver.toml
guide_builder/focus_group/fcgb/src/fcgb/chatbots/: chat.py  chatbot.py  selfconv.py  specbots.py
guide_builder/focus_group/fcgb/src/fcgb/prompts/editor/initial/subject_details/: subject_details_button_v1.0.txt  subject_details_human_init_v1.0.txt
guide_builder/focus_group/fcgb/src/fcgb/prompts/job_handler/: job_handler_instruction_v1.0.txt  job_handler_instruction_v2.0.txt  job_handler_system_v1.0.txt
guide_builder/focus_group/fcgb/src/fcgb/prompts/planned_task_solver/general/: general_pts_base_extension_v1.0.txt  general_pts_base_extension_v1.1.txt  general_pts_base_extension_v3.0.txt  general_pts_distribution_v1.0.txt  general_pts_distribution_v2.0.txt  general_pts_distribution_v2.1.txt  general_pts_distribution_v3.0.txt  general_pts_end_v1.0.txt  general_pts_end_v3.0.txt  general_pts_planning_v1.0.txt  general_pts_planning_v1.1.txt  general_pts_planning_v3.0.txt  general_pts_report_v1.1.txt  general_pts_report_v3.0.txt  general_pts_system_v1.0.txt  general_pts_system_v1.1.txt  general_pts_system_v3.0.txt
guide_builder/focus_group/fcgb/src/fcgb/prompts/planned_task_solver/init_planning/: init_plan_pts_query_v1.0.txt
guide_builder/focus_group/fcgb/src/fcgb/prompts/recruiter/personas/: define_personas_button_v1.0.txt  define_personas_system_v1.0.txt
guide_builder/focus_group/fcgb/src/fcgb/prompts/researcher/conversation_graph/expert/: self_conv_expert_system_v1.0.txt
guide_builder/focus_group/fcgb/src/fcgb/prompts/researcher/conversation_graph/researcher/: self_conv_human_init_v1.0.txt  self_conv_researcher_system_v1.0.txt  self_conv_researcher_system_v2.0.txt  self_conv_researcher_system_v2.1.txt  self_conv_summary_v1.0.txt
guide_builder/focus_group/fcgb/src/fcgb/prompts/researcher/conversation_graph/strategy/: self_conv_strategy_list_v1.0.txt  self_conv_strategy_summary_v1.0.txt
guide_builder/focus_group/fcgb/src/fcgb/prompts/researcher/conversation_graph/verification/: verification_output_v2.0.txt  (+4 more)
guide_builder/focus_group/fcgb/src/fcgb/prompts/researcher/phantom_researcher/: phantom_research_job_v2.0.txt  phantom_research_system_v1.0.txt
guide_builder/focus_group/fcgb/src/fcgb/prompts/researcher/query/: prepare_web_query_v1.0.txt
guide_builder/focus_group/fcgb/src/fcgb/prompts/reviewer/initial/: init_restrictions_button_v1.0.txt  init_restrictions_hello_v1.0.txt  init_restrictions_system_v1.0.txt
guide_builder/focus_group/fcgb/src/fcgb/prompts/test/base_chat_tests/: base_chat_init_human_v1.0.txt  base_chat_system_v1.0.txt
guide_builder/focus_group/fcgb/src/fcgb/tools/: job_handler.py  phantom_researcher.py  spectools.py
guide_builder/focus_group/fcgb/src/fcgb/types/: example_structures.py  initial.py  rag.py  tools.py  utils.py
guide_builder/focus_group/fcgb/tests/fake_models_tests/: fake_tavily_test.py  structured_output_test.py
guide_builder/focus_group/fcgb/tests/prompt_manager_tests/: prompt_manager_test.py
perigonscout/geodoc_loader/: README.md  pyproject.toml
perigonscout/geodoc_loader/geodoc_loader/area/: grid.py  queries.py
perigonscout/geodoc_loader/geodoc_loader/download/: core.py  process.py  queue.py
perigonscout/geodoc_loader/geodoc_loader/handlers/: collection.py  tiff.py
perigonscout/geodoc_loader/geodoc_loader/resources/: fonts.py
perigonscout/geodoc_loader/geodoc_loader/services/: ejournals.py  grid.py  uldk.py
(+361 files in other folders)
