[build-system]
requires = ["setuptools>=61.0", "wheel"] # Updated setuptools version for modern practices
build-backend = "setuptools.build_meta"

[project]
name = "geodoc_loader"
version = "0.1.0"
description = "A Python package for downloading, processing, and loading geospatial data."
authors = [
    { name = "Dariusz Åazor", email = "dariuszlazor@gmail.com" }
]
# Corrected: Referencing the license file directly under [project.license]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["geospatial", "bigquery", "google-cloud", "data-processing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License", # This classifier is appropriate for "Commercial" license
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "tqdm>=4.64.1,<5.0.0",
    "fiona>=1.9.0,<1.9.7",
    "geopandas>=0.13.2,<0.14.0",
    "pandas>=2.0.3,<3.0.0",
    "google-cloud-bigquery>=3.35.1,<4.0.0",
    "google-cloud-storage>=2.10.0,<3.0.0",
    "shapely>=2.0.1,<3.0.0",
    "pyproj>=3.6.0,<4.0.0",
    "scipy>=1.10.1,<2.0.0",
    "cairosvg>=2.8.2,<3.0.0",
    "svgelements>=1.8.4,<2.0.0",
    "Pillow>=9.0.0,<10.0.0",
    "importlib-resources>=5.12.0,<7.0.0",
    "numpy>=1.23.0,<2.0.0",
    "rasterio>=1.4.3,<2.0.0",
    "aiohttp>=3.12.13,<4.0.0",
    "geodoc_config>=0.1.0",
]

[tool.setuptools]
# Removed: license_file is not a valid property directly under [tool.setuptools]
# The license file is now specified under [project.license]

[tool.setuptools.packages.find]
where = ["."] # Search for packages in the current directory (where pyproject.toml is)
include = ["geodoc_loader*"] # Include your main package and its sub-packages

[tool.setuptools.package-data]
geodoc_loader = ["resources/fonts/*"]
